# AirDet_ROS

./: CMakeLists.txt  README.md  package.xml
airdet/: all.sh  all_1.sh  all_2.sh  fsod_train_net.py  test_final.py
airdet/GradCAM/: grad_cam.py
airdet/configs/fsod/: Base-FSOD-C4.yaml  R_50_C4_1x.yaml  finetune_R_101_C4_1x_coco1.yaml  finetune_R_101_C4_1x_coco2.yaml  finetune_R_101_C4_1x_coco3.yaml  finetune_R_101_C4_1x_coco5.yaml  finetune_R_101_C4_1x_subt1.yaml  finetune_R_101_C4_1x_subt2.yaml  finetune_R_101_C4_1x_subt3.yaml  finetune_R_101_C4_1x_voc1.yaml  finetune_R_101_C4_1x_voc2.yaml  finetune_R_101_C4_1x_voc3.yaml  finetune_R_101_C4_1x_voc5.yaml  test_R_101_subt3_final.yaml  test_R_50_subt3_final.yaml
airdet/datasets/: bad_support.txt  generate_support_data.sh  new_df.py  new_mul_df.py  replace_support.py  support.sh
airdet/datasets/SUBT/: 1_split_filter.py  3_gen_support_pool.py  4_gen_support_pool_10_shot.py  6_voc_few_shot.py  create_test.py  generate_dict.py  move_bad.sh  move_pro.sh  move_promising.sh
airdet/fewx/config/: defaults.py
airdet/fewx/evaluation/: coco_evaluation.py  vis.py
airdet/log/101_new_train/: fsod_test_log_subt1_val_a_0.txt  fsod_test_log_subt1_val_a_1.txt  fsod_test_log_subt1_val_a_2.txt  fsod_test_log_subt1_val_a_3.txt  fsod_test_log_subt1_val_a_4.txt  fsod_test_log_subt1_val_a_5.txt  fsod_test_log_subt1_val_a_6.txt  fsod_test_log_subt1_val_b_1.txt  fsod_test_log_subt1_val_b_2.txt  (+457 more)
airdet/support_dir/: support_feature.pkl
launch/: airdet_ros.launch
msg/: Result.msg
rviz/: default.rviz
src/: airdet_ros
(+277 files in other folders)
